corrected wordwrap of long titles

--- a/templates/beez3/css/layout.css
+++ b/templates/beez3/css/layout.css
@@ -20,6 +20,7 @@ body h1,body h2,body h3,body h4,body h5,body h6 {
 	font-weight: normal;
 	color: inherit;
 	text-rendering: optimizelegibility;
+	word-wrap: break-word;
 }
 
 body h1 {
@@ -57,6 +58,7 @@ body p,body ol,body ul,body dl,body address {
 	margin-bottom: 1.5em;
 	font-size: 1.0em;
 	line-height: 1.5em;
+	word-wrap: break-word;
 }
 
 small {
